<resources>
    <string name="app_name">PokeDex</string>
    <string name="nav_button_home">Home</string>
    <string name="nav_button_by_type">By Type</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_details_desc">Description</string>
    <string name="title_specie_details">Specie</string>
    <string name="title_gender_details">Gender</string>
    <string name="title_weight_details">Weight</string>
    <string name="title_height_details">Height</string>
    <string name="title_skills_details">Skills</string>
    <string name="title_evolutions_details">Evolutions</string>
    <string name="kilograms">%1$s Kg</string>
    <string name="meters">%1$s m</string>
    <string name="empty_message">The pokemon hasn\'t been charged yet!!</string>
    <string name="title_basestats_details">Base Statistics</string>
    <string-array name="types">
        <item>Normal</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Electric</item>
        <item>Grass</item>
        <item>Ice</item>
        <item>Fighting</item>
        <item>Poison</item>
        <item>Ground</item>
        <item>Flying</item>
        <item>Psychic</item>
        <item>Bug</item>
        <item>Rock</item>
        <item>Ghost</item>
        <item>Dragon</item>
        <item>Dark</item>
        <item>Steel</item>
        <item>Fairy</item>
    </string-array>
</resources>